fix overflow

--- a/blueyprod-frontend/src/index.css
+++ b/blueyprod-frontend/src/index.css
@@ -8,6 +8,7 @@ body, html {
   width: 100%;
   min-height: 100vh;
   overflow: hidden;
+  overflow-y: auto;
 }
 
 body {
